<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/bg3"
    tools:context=".LoginActivity">


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:id="@+id/email_login_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/password"
            android:hint="@string/password_hint"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"/>

        <Button
            android:id="@+id/email_sign_in_button"
            android:textColor="@color/white"
            android:text="@string/login_text"
            android:background="@drawable/shape_button02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/or_text"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/create_acct_button_login"
            android:textColor="@color/white"
            android:text="@string/create_text"
            android:background="@drawable/shape_button02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>


    </LinearLayout>


</LinearLayout>