<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg4"
    android:padding="16dp"
    tools:context=".CreateAccountActivity">


    <ProgressBar
        android:id="@+id/create_acct_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:id="@+id/acct_login_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/username_account"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp" />


        <AutoCompleteTextView
            android:id="@+id/email_account"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/password_account"
            android:hint="@string/password_hint"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"/>



        <Button
            android:id="@+id/create_acct_button"
            android:textColor="@color/white"
            android:text="@string/create_text"
            android:background="@drawable/shape_button02"
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>


    </LinearLayout>

</LinearLayout>