<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_getstarted"
    android:padding="18dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:layout_marginBottom="220dp"
        android:text="@string/title_text"
        android:textColor="@color/black"
        android:textSize="30sp"/>
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@android:color/transparent"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true">


            <TextView
                android:id="@+id/gratefulText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/grateful_text"
                android:textSize="19sp" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
    <Button
        android:id="@+id/startBtn"
        android:text="@string/get_started_text"
        android:textColor="@color/white"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>



</LinearLayout>