<?xml version="1.0" encoding="UTF-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostJournalActivity">



    <ImageView
        android:id="@+id/post_imageView"
        android:layout_height="242dp"
        android:layout_width="393dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/image_three"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp" />


    <TextView
        android:id="@+id/post_username_textview"
        android:layout_height="40dp"
        android:layout_width="99dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/postCameraButton"
        app:layout_constraintHorizontal_bias="0.084"
        android:textSize="24sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="Gina"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/post_username_textview"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:id="@+id/post_date_textview"
        app:layout_constraintHorizontal_bias="0.071"
        android:textSize="18sp"
        android:text="Today"/>

    <ImageView
        android:id="@+id/postCameraButton"
        android:layout_width="81dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        app:layout_constraintBottom_toBottomOf="@+id/post_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/post_imageView"
        app:layout_constraintVertical_bias="0.538"
        app:srcCompat="@android:drawable/ic_menu_camera" />


    <EditText
        android:id="@+id/post_title_et"
        android:layout_height="45dp"
        android:background="@drawable/input_outline"
        android:layout_width="379dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/post_imageView"
        app:layout_constraintHorizontal_bias="0.062"
        android:inputType="textPersonName"
        android:hint="@string/title_hint"
        android:ems="10"/>

    <EditText

        android:id="@+id/post_description_et"
        android:layout_height="118dp"
        android:background="@drawable/input_outline"
        android:layout_width="379dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/post_title_et"
        app:layout_constraintHorizontal_bias="0.062"
        android:textSize="19sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:inputType="textMultiLine"
        android:hint="@string/thoughts"
        android:ems="10"
        android:padding="15dp"/>

    <ProgressBar
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="8dp"
        android:id="@+id/post_progressBar"
        app:layout_constraintTop_toBottomOf="@+id/post_description_et"
        app:layout_constraintHorizontal_bias="0.498"
        style="?android:attr/progressBarStyle"/>

    <Button
        android:id="@+id/post_save_journal_button"
        android:layout_width="378dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:text="@string/save_button"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent" />








</androidx.constraintlayout.widget.ConstraintLayout>